# ml-assignment

./: README.md
code/: ad_cranfield.name
code/opencv/: CMakeLists.txt  main.cpp
code/opencv/datasets/: ad1090.test  ad2080.test  ad3070.test  ad4060.test  ad5050.test  ad5050.train
code/opencv/src/: ann.cpp  bayes.cpp  boost_tree.cpp  decision_tree.cpp  forest.cpp  main.cpp
code/opencv/src/utilities/: Logger.cpp  Logger.h  Runner.cpp  Runner.h  constants.h  data.h  file.cpp  file.h
report/: assignment_data.xlsx  report.md
